[package]
name = "drone-build-notifier"
version = "0.0.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
notify-rust = "4"
once_cell = "1.7"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
tokio = { version = "1.6", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "0.5"
